rename main file

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,10 +21,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link text-light" href="/auth">Register</a>
+              <a class="nav-link text-light" href="{{ url_for('auth') }}">Register</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-light" href="/auth">Login</a>
+              <a class="nav-link text-light" href="{{ url_for('auth') }}">Login</a>
             </li>
           </ul>
         </div>
