--- a/templates/auth.html
+++ b/templates/auth.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="container my-4" id="container">
   <div class="form-container sign-up-container">
-    <form action="#">
+    <form action="/register" method="post">
       <h1>Create Account</h1>
       
       <span>or use your email for registration</span>
@@ -16,7 +16,7 @@
     </form>
   </div>
   <div class="form-container sign-in-container">
-    <form action="#">
+    <form action="/login" method="post">
       <h1>Sign in</h1>
       
       <span>to get started</span>
@@ -29,7 +29,7 @@
   <div class="overlay-container">
     <div class="overlay">
       <div class="overlay-panel overlay-left">
-        <h1>Welcome Back!</h1>
+        <h1>Hello Pramod</h1>
         <p>To keep connected with us please login with your personal info</p>
         <button class="ghost" id="signIn">Sign In</button>
       </div>
