--- a/templates/auth.html
+++ b/templates/auth.html
@@ -9,9 +9,9 @@
       <h1>Create Account</h1>
       
       <span>or use your email for registration</span>
-      <input type="text" placeholder="Name" />
-      <input type="email" placeholder="Email" />
-      <input type="password" placeholder="Password" />
+      <input type="text" name="name" placeholder="Name" />
+      <input type="email" name="email" placeholder="Email" />
+      <input type="password" name="password" placeholder="Password" />
       <button>Sign Up</button>
     </form>
   </div>
@@ -20,8 +20,8 @@
       <h1>Sign in</h1>
       
       <span>to get started</span>
-      <input type="email" placeholder="Email" />
-      <input type="password" placeholder="Password" />
+      <input type="email" name="email" placeholder="Email" />
+      <input type="password" name="password" placeholder="Password" />
       <a href="/forgetpassword">Forgot your password?</a>
       <button>Sign In</button>
     </form>
@@ -29,7 +29,7 @@
   <div class="overlay-container">
     <div class="overlay">
       <div class="overlay-panel overlay-left">
-        <h1>Hello Pramod</h1>
+        <h1>Hello Folk</h1>
         <p>To keep connected with us please login with your personal info</p>
         <button class="ghost" id="signIn">Sign In</button>
       </div>
