generate protected routes for user

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,17 +20,30 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            {% if not session['loggedin'] %}
             <li class="nav-item">
-              <a class="nav-link text-light" href="{{ url_for('auth') }}">Register</a>
+              <a class="nav-link text-light" href="{{ url_for('auth') }}"
+                >Register</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link text-light" href="{{ url_for('auth') }}">Login</a>
+              <a class="nav-link text-light" href="{{ url_for('auth') }}"
+                >Login</a
+              >
             </li>
+            {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href="{{url_for('logout')}}">Logout</a>
+            </li>
+            {% endif %}
           </ul>
         </div>
       </div>
     </nav>
-    {% block content %} {% endblock %} {% block footer %} {% endblock %}
+    {% block content %} {% endblock %} 
+    <footer class="container-fluid bg-danger d-flex justify-content-center">
+      <p class="text-white fw-bold ">&copy; Cheque-Detection - 2023</p>
+    </footer>
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
