add upload cheque image page

--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
       </div>
     </nav>
     {% block content %} {% endblock %} 
-    <footer class="container-fluid bg-danger d-flex justify-content-center">
+    <footer class="container-fluid bg-danger my-4 d-flex justify-content-center">
       <p class="text-white fw-bold ">&copy; Cheque-Detection - 2023</p>
     </footer>
   </body>
