--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,10 @@
     <title>Welcome to Cheque Detection System</title>
     <link
       rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
@@ -33,17 +37,28 @@
             </li>
             {% else %}
             <li class="nav-item">
+              <a class="nav-link" href="{{url_for('dashboard')}}">Dashboard</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="{{url_for('logout')}}">Logout</a>
             </li>
+
             {% endif %}
           </ul>
         </div>
       </div>
     </nav>
-    {% block content %} {% endblock %} 
-    <footer class="container-fluid bg-danger my-4 d-flex justify-content-center">
-      <p class="text-white fw-bold ">&copy; Cheque-Detection - 2023</p>
-    </footer>
+    <div class="row">
+      <div class="col-md-3">{% block sidemenu %} {% endblock %}</div>
+      <div class="col-md-9">{% block section %} {% endblock %}</div>
+    </div>
+    {% block content %} {% endblock %}
+
+    <!-- <footer
+      class="container-fluid bg-danger my-4 d-flex justify-content-center"
+    >
+      <p class="text-white fw-bold">&copy; Cheque-Detection - 2023</p>
+    </footer> -->
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
