--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,17 +1,22 @@
-{% extends 'base.html' %}
-{% block head %}
+{% extends 'base.html' %} 
 
-<link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-/>
+{% block head %} 
 <link
   href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
   rel="stylesheet"
 />
 <link rel="stylesheet" href={{
-url_for("static",filename='css/upload-cheque.css') }} /> {% endblock %} {% block
-content %}
+url_for("static",filename='css/upload-cheque.css') }} />
+<link rel="stylesheet" href={{
+url_for("static",filename='css/sidemenu.css') }} /> 
+{% endblock %}
+
+{% block sidemenu%}
+  {% include 'sidemenu.html' %} 
+{% endblock %} 
+  
+
+{% block section %}
 <div class="container">
   <div class="d-flex justify-content-center">
     <div class="col-md-3"></div>
