--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            {% if not session['loggedin'] %}
+            {% if not session['email'] %}
             <li class="nav-item">
               <a class="nav-link text-light" href="{{ url_for('auth') }}"
                 >Register</a
