--- a/templates/sidemenu.html
+++ b/templates/sidemenu.html
@@ -1,10 +1,11 @@
 <ul class="menu">
   <li class="list-item py-4 px-3 text-center" class="list-item">
     <img
+      id="profileImage"
       class="user-image"
       width="100"
       height="100"
-      src="https://images.unsplash.com/photo-1570295999919-56ceb5ecca61"
+      src="https://cdn-icons-png.flaticon.com/512/149/149071.png"
       alt="profile image"
     />
   </li>
@@ -34,3 +35,13 @@
     >
   </li>
 </ul>
+<script>
+  fetch("/get_userimage/{{ email }}")
+    .then((data) => {
+      console.log(data);
+      document.getElementById("profileImage").src = data.url;
+    })
+    .catch((error) => {
+      console.log(error);
+    });
+</script>
