--- a/templates/base.html
+++ b/templates/base.html
@@ -37,10 +37,10 @@
             </li>
             {% else %}
             <li class="nav-item">
-              <a class="nav-link" href="{{url_for('dashboard')}}">Dashboard</a>
+              <a class="nav-link text-white" href="{{url_for('dashboard')}}">Dashboard</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{url_for('logout')}}">Logout</a>
+              <a class="nav-link text-white" href="{{url_for('logout')}}">Logout</a>
             </li>
 
             {% endif %}
