--- a/static/css/auth.css
+++ b/static/css/auth.css
@@ -32,8 +32,8 @@
 
 #container button {
   border-radius: 20px;
-  border: 1px solid rgba(220, 53, 69);
-  background-color: rgba(220, 53, 69);
+  border: 1px solid #0275d8;
+  background-color: #0275d8;
   color: #ffffff;
   font-size: 12px;
   font-weight: bold;
@@ -147,7 +147,7 @@
 }
 
 .overlay {
-  background: rgba(220, 53, 69);
+  background: #0275d8;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 0 0;
