--- a/templates/sidemenu.html
+++ b/templates/sidemenu.html
@@ -1,4 +1,4 @@
-<ul class="menu">
+<ul class="menu container-fluid text-white">
   <li class="list-item py-4 px-3 text-center" class="list-item">
     <img
       id="profileImage"
