--- a/static/css/upload-cheque.css
+++ b/static/css/upload-cheque.css
@@ -13,7 +13,7 @@ input[type="file"] {
 label {
   display: block;
   position: relative;
-  background-color: rgba(220, 53, 69);
+  background-color: #0275d8;
   color: #ffffff;
   font-size: 1.1em;
   text-align: center;
