--- a/templates/auth.html
+++ b/templates/auth.html
@@ -37,9 +37,9 @@
         <button class="ghost" id="signIn">Sign In</button>
       </div>
       <div class="overlay-panel overlay-right">
-        <h1>Hello, Friend!</h1>
+        <!-- <h1>Hello, Friend!</h1>
         <p>Enter your personal details and start journey with us</p>
-        <button class="ghost" id="signUp">Sign Up</button>
+        <button class="ghost" id="signUp">Sign Up</button> -->
       </div>
     </div>
   </div>
