fix sidemenu and spacing

--- a/templates/auth.html
+++ b/templates/auth.html
@@ -37,6 +37,7 @@
         <button class="ghost" id="signIn">Sign In</button>
       </div>
       <div class="overlay-panel overlay-right">
+        <img src={{url_for('static',filename='images/cheque-vector.png')}} />
         <!-- <h1>Hello, Friend!</h1>
         <p>Enter your personal details and start journey with us</p>
         <button class="ghost" id="signUp">Sign Up</button> -->
