--- a/templates/base.html
+++ b/templates/base.html
@@ -15,14 +15,15 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href={{
-    url_for("static",filename='css/base.css') }} />
-   
+    <link rel="stylesheet" href={{ url_for("static",filename='css/base.css') }}
+    /> {% block head %} {% endblock %}
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-menu">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/"><strong>Cheque Detection</strong></a>
+        <a class="navbar-brand text-white" href="/"
+          ><strong>Cheque Detection</strong></a
+        >
 
         <div class="collapse navbar-collapse">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -51,7 +52,7 @@
       </div>
     </nav>
     <div class="row container-fluid">
-      <div class="col-md-3">{% block sidemenu %} {% endblock %}</div>
+      <div class="col-md-3 p-0">{% block sidemenu %} {% endblock %}</div>
       <div class="col-md-9">{% block section %} {% endblock %}</div>
     </div>
     {% block content %} {% endblock %}
