--- a/templates/sidemenu.html
+++ b/templates/sidemenu.html
@@ -23,14 +23,7 @@
   </li>
 
   <li class="list-item">
-    <a class="list-anchor py-2 px-3" href="/dashboard/extract"
-      ><i class="fa-solid fa-pen-to-square mx-2"></i>Extract Cheque
-      Information</a
-    >
-  </li>
-
-  <li class="list-item">
-    <a class="list-anchor py-2 px-3" href="/dashboard"
+    <a class="list-anchor py-2 px-3" href="/dashboard/validate-cheque"
       ><i class="fa-solid fa-sack-dollar mx-2"></i>Validate Cheque</a
     >
   </li>
