--- a/templates/history.html
+++ b/templates/history.html
@@ -1,33 +1,34 @@
 {% extends 'base.html' %} {% block head %} <link rel="stylesheet" href={{
-url_for("static",filename='css/sidemenu.css') }} /> {% endblock %} {%
-block sidemenu%} {% include 'sidemenu.html' %} {% endblock %} {% block section
-%}
+url_for("static",filename='css/sidemenu.css') }} /> {% endblock %} {% block
+sidemenu%} {% include 'sidemenu.html' %} {% endblock %} {% block section %}
 <center class="my-4"><h3>Cheque History</h3></center>
 <table class="table">
   <thead>
     <tr>
       <th scope="col">#</th>
-      <th scope="col">Bank Name</th>
+      <!-- <th scope="col">Bank Name</th> -->
       <th scope="col">Bearer</th>
-      <th scope="col">Amount</th>
-      <th scope="col">Is Valid</th>
       <th scope="col">Account No.</th>
+      <th scope="col">Amount</th>
+      <th scope="col">IFSC</th>
       <th scope="col">Date</th>
+      <th scope="col">Validated On</th>
+      <th scope="col">Amount in words</th>
     </tr>
   </thead>
   <tbody>
     {% for cheque in chequeDetails %}
     <tr>
       <th scope="row">{{loop.index}}</th>
-      <td>{{cheque.bank_name}}</td>
-      <td>{{cheque.bearer}}</td>
-      <td>{{cheque.amount}}</td>
-      <td>{{cheque.isvalid}}</td>
+      <td>{{cheque.name}}</td>
       <td>{{cheque.account_no}}</td>
+      <td>{{cheque.amount}}</td>
+      <td>{{cheque.ifsc}}</td>
       <td>{{cheque.date}}</td>
+      <td>{{cheque.validated_on}}</td>
+      <td>{{cheque.amount_in_words}}</td>
     </tr>
     {% endfor %}
-    
   </tbody>
 </table>
-{% endblock %} 
+{% endblock %}
